--- a/index.html
+++ b/index.html
@@ -3,10 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel</title>
+    <title>Awesome Travel</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+     <!-- header section -->
+     <header>
+        <nav class="container">
+            <div class="header-titel">
+                <img src="./Images/Group 40071 (2).png" alt="">
+                <h4> Awesome <span class=same-text>Travel</span></h4> 
+            </div>
+
+            <div class="header-nav">
+                <ul>
+                    <li><a href=""><span class="same-text">Home</span></a></li>
+                    <li><a href="">Packages</a></li>
+                    <li><a href="">Testimonial</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+     </header>
+
+     <!-- main section -->
+    <main>
+    <!-- banner section -->
+
+
+
+    <!-- tour section -->
+     <div class="tour-container">
+        <div class="tour-text">
+        <h3>Our Popular Tours</h3>
+        <p>Are you yearning to explore new destinations and immerse yourself in different cultures? </p>
+     <ul>
+        <li>our tours take you to iconic destinations that define the essence of each region.</li>
+        <li>Enjoy peace of mind knowing that our experienced guides, luxurious accommodations. </li>
+        <li> Our beach vacations often include stays at luxurious resorts, offering world-class spas and delectable cuisine.
+        </li>
+     </ul>
     
+        <p>We have the perfect itinerary to satisfy your wanderlust.</p>
+        </div>
+        <div class="tour-img">
+        <img src="./Images/Rectangle 4.png" alt="">
+        </div>
+     </div>
+    </main>
+
 </body>
 </html>
