header & main section

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <nav class="container">
             <div class="header-titel">
                 <img src="./Images/Group 40071 (2).png" alt="">
-                <h4> Awesome <span class=same-text>Travel</span></h4> 
+                <h4> Awesome <span class=same-text >Travel</span></h4> 
             </div>
 
             <div class="header-nav">
-                <ul>
-                    <li><a href=""><span class="same-text">Home</span></a></li>
+                <ul >
+                    <li><a href=""><span class="text-normal  ">Home</span></a></li>
                     <li><a href="">Packages</a></li>
                     <li><a href="">Testimonial</a></li>
                     <li><a href="">Blog</a></li>
@@ -30,7 +30,10 @@
      <!-- main section -->
     <main>
     <!-- banner section -->
-
+     <div class="banner-container">
+      <h1>Explore Your Travel</h1>
+     <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+     </div>
 
 
     <!-- tour section -->
@@ -44,8 +47,9 @@
         <li> Our beach vacations often include stays at luxurious resorts, offering world-class spas and delectable cuisine.
         </li>
      </ul>
-    
-        <p>We have the perfect itinerary to satisfy your wanderlust.</p>
+        <p>We have the perfect itinerary to satisfy your wanderlust.</p> 
+
+        <button class="btn-main">Read More</button>
         </div>
         <div class="tour-img">
         <img src="./Images/Rectangle 4.png" alt="">
