footer style compeliet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Travel</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/23b2497663.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <!-- header section -->
@@ -31,8 +32,19 @@
     <main>
     <!-- banner section -->
      <div class="banner-container">
-      <h1>Explore Your Travel</h1>
+      <div class="banner-text">
+        <h1>Explore Your Travel</h1>
      <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+      </div>
+    <div class="maanu-bar">
+        <ul>
+            <input type="text" placeholder="Where go" name="" id="">
+            <input type="text" placeholder="When" name="" id="">
+            <input type="text" placeholder="Select Type" name="" id="">
+            <input type="text" placeholder="Find Now" name="" id="">
+        </ul>
+    </div>
+
      </div>
 
 
@@ -55,7 +67,45 @@
         <img src="./Images/Rectangle 4.png" alt="">
         </div>
      </div>
+     <!-- optional section -->
+<div class="optional-section">
+    <div class="tour-text">
+        <h3>A Simple Perfect Place To Get Lost</h3>
+        <p>Are you yearning to explore new destinations and immerse yourself in different cultures? </p>
+     <ul class="text-list">
+        <li>Enjoy peace of mind knowing that our experienced guides, luxurious accommodations. </li>
+        <li> Our beach vacations often include stays at luxurious resorts, offering world-class spas and delectable cuisine.
+        </li>
+     </ul>
+      
+        <button class="btn-main">Read More</button>
+        </div>
+        <div class="tour-img">
+        <img src="./Images/Group 40089.png" alt="">
+        </div>
+     </div>
+</div>
+    
+
     </main>
 
+
+    <footer>
+        <div class="header-titel">
+            <img src="./Images/Group 40071 (2).png" alt=""> <h4> Awesome <span class=same-text >Travel</span></h4> 
+        </div>
+         <div class="footer-text">
+             <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+         </div>
+         <div class="icon">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-github"></i>
+         </div>
+         <hr>
+
+         <p class="footer-text">2017, All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
