resposive for mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <!-- main section -->
     <main>
     <!-- banner section -->
-     <div class="banner-container">
+     <div class="banner-container hide">
       <div class="banner-text">
         <h1>Explore Your Travel</h1>
      <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
@@ -47,7 +47,7 @@
      </div>
 
     <!-- tour section -->
-     <div class="tour-container">
+     <div class="tour-container ">
         <div class="tour-text">
         <h3>Our Popular Tours</h3>
         <p>Are you yearning to explore new destinations and immerse yourself in different cultures? </p>
@@ -67,14 +67,14 @@
      </div>
 
      <!-- Destination section -->
-    <div class="Destination-container">
+    <div class="Destination-container hide">
        <div class="choose-text">
         <h3>Choose Your Destination</h3>
         <p>Our tours take you to iconic destinations that define the essence of each region.</p>
        </div>
-      <div class="Destination-Place-img">
+      <div class="Destination-Place-img ">
       <div class="row-1">
-        <img src="./Images/Rectangle 5.png" alt="">
+        <img src="./Images/Rectangle 5.png"  alt=""  >
       <img src="./Images/Rectangle 8.png" alt="">
       </div>
       <div class="row-2">
@@ -92,7 +92,7 @@
 
 
     <!-- service section -->
-    <div class="service-containar">
+    <div class="service-containar hide">
         <div class="choose-text">
             <h3>Why Choose Us</h3>
             <p>Enjoy peace of mind knowing that our experienced guides, luxurious accommodations.</p>
@@ -100,31 +100,37 @@
          
 
     </div>
-<div class="service-card">
+<div class="service-card hide">
     <div class="card">
+     <div id="center-card">
         <img src="./small-image/hotel 1.jpg" alt="">
         <h4>Handpicked Hotels</h4>
         <p>What makes Sovereign Luxury Travel truly stand out from our competition? It’s the way we handpick our hotels and resorts.  
         </p>
+     </div>
     </div>
     <div class="card-world">
+       <div id="center-card">
         <img src="./small-image/map 1.jpg" alt="">
         <h4>World Class Service</h4>
         <p>What makes Sovereign Luxury Travel truly stand out from our competition? It’s the way we handpick our hotels and resorts.  
         </p>
+       </div>
     </div>
     <div class="card center">
-        <img src="./small-image/price-tag 1.jpg" alt="">
+        <div id="center-card">
+            <img src="./small-image/price-tag 1.jpg" alt="">
         <h4>Best Price Guarantee</h4>
         <p>What makes Sovereign Luxury Travel truly stand out from our competition? It’s the way we handpick our hotels and resorts.  
         </p>
+        </div>
     </div>
     </div>
   
 </div>
 
      <!-- optional section -->
-<div class="optional-section">
+<div class="optional-section hide">
     <div class="tour-text">
         <h3>A Simple Perfect Place To Get Lost</h3>
         <p>Are you yearning to explore new destinations and immerse yourself in different cultures? </p>
@@ -162,8 +168,8 @@
     </main>
 
 
-    <footer>
-        <div class="header-titel">
+    <footer class="hide">
+        <div class="header-titel ">
             <img src="./Images/Group 40071 (2).png" alt=""> <h4> Awesome <span class=same-text >Travel</span></h4> 
         </div>
          <div class="footer-text">
