try for responsive in mobile device

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <!-- main section -->
     <main>
     <!-- banner section -->
-     <div class="banner-container hide">
+     <div class="banner-container">
       <div class="banner-text">
         <h1>Explore Your Travel</h1>
      <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
@@ -67,24 +67,24 @@
      </div>
 
      <!-- Destination section -->
-    <div class="Destination-container hide">
+    <div class="Destination-container ">
        <div class="choose-text">
         <h3>Choose Your Destination</h3>
         <p>Our tours take you to iconic destinations that define the essence of each region.</p>
        </div>
       <div class="Destination-Place-img ">
       <div class="row-1">
-        <img src="./Images/Rectangle 5.png"  alt=""  >
-      <img src="./Images/Rectangle 8.png" alt="">
+        <img id="img-pic" src="./Images/Rectangle 5.png"  alt=""  >
+      <img id="img-pic" src="./Images/Rectangle 8.png" alt="">
       </div>
       <div class="row-2">
-        <img src="./Images/Rectangle 6.png" alt="">
-      <img src="./Images/Rectangle 7.png" alt="">
-      <img src="./Images/Rectangle 9.png" alt="">
+        <img id="img-pic" src="./Images/Rectangle 6.png" alt="">
+      <img id="img-pic" src="./Images/Rectangle 7.png" alt="">
+      <img id="img-pic" src="./Images/Rectangle 9.png" alt="">
       </div>
       <div class="row-3">
-        <img src="./Images/Rectangle 11.png" alt="">
-      <img src="./Images/Rectangle 10.png" alt="">
+        <img id="img-pic" src="./Images/Rectangle 11.png" alt="">
+      <img id="img-pic" src="./Images/Rectangle 10.png" alt="">
       </div>
       
       </div>
@@ -130,7 +130,7 @@
 </div>
 
      <!-- optional section -->
-<div class="optional-section hide">
+<div class="optional-section">
     <div class="tour-text">
         <h3>A Simple Perfect Place To Get Lost</h3>
         <p>Are you yearning to explore new destinations and immerse yourself in different cultures? </p>
