responsive for footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <div class="banner-container">
       <div class="banner-text">
         <h1>Explore Your Travel</h1>
-     <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+     <p>We have the perfect itinerary to satisfy your wanderlust</p>
       </div>
     <div class="maanu-bar">
         <ul>
@@ -157,7 +157,7 @@
         <div class="Newsletter-input">
             <input type="text" placeholder="Enter your name" name="" id="">
             <input type="text" placeholder="Enter your email" name="" id="">
-            <button style="width: 393px;" class="btn-main ">Subscribe</button>
+            <button  class="btn-main ">Subscribe</button>
         </div>
     </div>
     <div class="Newsletter-img">
@@ -168,12 +168,12 @@
     </main>
 
 
-    <footer class="hide">
+    <footer >
         <div class="header-titel ">
             <img src="./Images/Group 40071 (2).png" alt=""> <h4> Awesome <span class=same-text >Travel</span></h4> 
         </div>
          <div class="footer-text">
-             <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+             <p>Our beach vacations often include stays at luxurious resorts, offering world-class spas and delectable cuisine. </p>
          </div>
          <div class="icon">
             <i class="fa-brands fa-twitter"></i>
