responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
     <!-- service section -->
-    <div class="service-containar hide">
+    <div class="service-containar">
         <div class="choose-text">
             <h3>Why Choose Us</h3>
             <p>Enjoy peace of mind knowing that our experienced guides, luxurious accommodations.</p>
@@ -100,7 +100,7 @@
          
 
     </div>
-<div class="service-card hide">
+<div class="service-card">
     <div class="card">
      <div id="center-card">
         <img src="./small-image/hotel 1.jpg" alt="">
